--- a/Atividade_N1/index.html
+++ b/Atividade_N1/index.html
@@ -1,1 +1,61 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Quiz Steven Universe</title>
+    </head>
+    <body>
+        <header>
+            <h1>Quiz Interativo Steven Universo</h1>
+            <p>Você é mesmo <strong>FÃ</strong> de <abbr title="Steven Universo">SU</abbr>?! Então venha testar seus conhecimentos sobre esse desenho maravilhoso!!</p>
+            <p>OBS: Irei considerar a ordem de lançamento dos episódios dos Estados Unidos e apenas o desenho clássico, não o <abbr title="Steven Universo">SU</abbr> Future.<br>Vamos começar!</p>
+        </header>
+        <main>
+            <!--Pergunta 01 vamoooooossss-->
+            <section>
+                <h2>Pergunta 01: Qual foi a primeria Crystal Gem que vimos "<abbr title="Desestabilizar">poofar</abbr>" no desenho?</h2>
+                <form>
+                    <input type="radio" value="Garnet" id="p1a" name="pergunta1">
+                    <label for="p1a">Garnet</label><br>
+                    <input type="radio" value="Pérola" id="p1b" name="pergunta1">
+                    <label for="p1b">Pérola</label><br>
+                    <input type="radio" value="Ametista" id="p1c" name="pergunta1">
+                    <label for="p1c">Ametista</label><br>
+                </form>
+            </section>
+            <!--Pergunta 02 yyeeeaahhh-->
+            <section>
+                <h2>Pergunta 02: Quantas regenerações a Garnet teve em toda a série?</h2>
+                <form>
+                    <input type="text" id="p2" name="pergunta2" placeholder="Digite sua resposta...">
+                </form>
+            </section>
+            <!--Pergunta 03!!!!!!-->
+            <section>
+                <h2>Pergunta 03: Qual foi a data de lançamento da animação na Cartoon Network dos <abbr title="Estados Unidos da América">EUA</abbr>? </h2>
+                <input type="date" id="p3" name="pergunta3">
+            </section>
+            <!--Pergunta 04 :))))))-->
+            <section>
+                <h2>Pergunta 04: A fusão Malaquita é composta por quais gems?</h2>
+                <form>
+                    <input type="checkbox" value="Ametista" id="p4a" name="pergunta4">
+                    <label for="p4a">Ametista</label><br>
+                    <input type="checkbox" value="Lapis Lazuli" id="p4b" name="pergunta4">
+                    <label for="p4b">Lapis Lazuli</label><br>
+                    <input type="checkbox" value="Jade" id="p4c" name="pergunta4">
+                    <label for="p4c">Jade</label><br>
+                    <input type="checkbox" value="Jasper" id="p4d" name="pergunta4">
+                    <label for="p4d">Jasper</label>
+                </form>
+            </section>
+            <!--Pergunta 05 pausa-->
+            <section>
+                
+            </section>
+        </main>
+        <footer></footer>
+    </body>
+    </html>
