--- a/Atividade_N1/index.html
+++ b/Atividade_N1/index.html
@@ -29,12 +29,17 @@
             <section>
                 <h2>Pergunta 02: Quantas regenerações a Garnet teve em toda a série?</h2>
                 <form>
-                    <input type="text" id="p2" name="pergunta2" placeholder="Digite sua resposta...">
+                    <!--<input type="text" id="p2" name="pergunta2" placeholder="Digite sua resposta...">-->
+                    <select name="pergunta2" id="p2">
+                        <option value="uma">Uma regeneração</option>
+                        <option value="duas">Duas regenerações</option>
+                        <option value="tres">Três regenerações</option>
+                    </select>
                 </form>
             </section>
             <!--Pergunta 03!!!!!!-->
             <section>
-                <h2>Pergunta 03: Qual foi a data de lançamento da animação na Cartoon Network dos <abbr title="Estados Unidos da América">EUA</abbr>? </h2>
+                <h2>Pergunta 03: Qual foi o ano de lançamento da animação na Cartoon Network dos <abbr title="Estados Unidos da América">EUA</abbr>, sabendo que o dia foi 4 e o mês novembro? </h2>
                 <input type="date" id="p3" name="pergunta3">
             </section>
             <!--Pergunta 04 :))))))-->
@@ -53,7 +58,7 @@
             </section>
             <!--Pergunta 05 pausa-->
             <section>
-                
+                <h2></h2>
             </section>
         </main>
         <footer></footer>
