--- a/Atividade_N1/index.html
+++ b/Atividade_N1/index.html
@@ -22,18 +22,18 @@
                     <input type="radio" value="Pérola" id="p1b" name="pergunta1">
                     <label for="p1b">Pérola</label><br>
                     <input type="radio" value="Ametista" id="p1c" name="pergunta1">
-                    <label for="p1c">Ametista</label><br>
+                    <label for="p1c">Ametista</label>
                 </form>
             </section>
             <!--Pergunta 02 yyeeeaahhh-->
             <section>
-                <h2>Pergunta 02: Quantas regenerações a Garnet teve em toda a série?</h2>
+                <h2>Pergunta 02: Quantas temporadas tem a série?</h2>
                 <form>
                     <!--<input type="text" id="p2" name="pergunta2" placeholder="Digite sua resposta...">-->
                     <select name="pergunta2" id="p2">
-                        <option value="uma">Uma regeneração</option>
-                        <option value="duas">Duas regenerações</option>
-                        <option value="tres">Três regenerações</option>
+                        <option value="3temp">3 temporadas</option>
+                        <option value="5temp">5 temporadas</option>
+                        <option value="6temp">6 temporadas</option>
                     </select>
                 </form>
             </section>
@@ -44,21 +44,61 @@
             </section>
             <!--Pergunta 04 :))))))-->
             <section>
-                <h2>Pergunta 04: A fusão Malaquita é composta por quais gems?</h2>
+                <h2>Pergunta 04: No episódio 2 da 1º temporada, qual arma Steven usa para destruir o olho vermelho?</h2>
                 <form>
-                    <input type="checkbox" value="Ametista" id="p4a" name="pergunta4">
-                    <label for="p4a">Ametista</label><br>
-                    <input type="checkbox" value="Lapis Lazuli" id="p4b" name="pergunta4">
-                    <label for="p4b">Lapis Lazuli</label><br>
-                    <input type="checkbox" value="Jade" id="p4c" name="pergunta4">
-                    <label for="p4c">Jade</label><br>
-                    <input type="checkbox" value="Jasper" id="p4d" name="pergunta4">
-                    <label for="p4d">Jasper</label>
+                    <input type="radio" value="Canhão de Luz Laser" id="p4a" name="pergunta4">
+                    <label for="p4a">Canhão de Luz Laser</label><br>
+                    <input type="radio" value="Flecha das Eras" id="p4c" name="pergunta4">
+                    <label for="p4c">Flecha das Eras</label><br>
+                    <input type="radio" value="Manopla Foguete" id="p4d" name="pergunta4">
+                    <label for="p4d">Manopla Foguete</label><br>
+                    <input type="radio" value="Terror dos Hereges" id="p4b" name="pergunta4">
+                    <label for="p4b">Terror dos Hereges</label> 
+                    
                 </form>
             </section>
             <!--Pergunta 05 pausa-->
             <section>
-                <h2></h2>
+                <h2>Pergunta 05: A fusão Malaquita é composta por quais gems?</h2>
+                <form>
+                    <input type="checkbox" value="Ametista" id="p5a" name="pergunta4">
+                    <label for="p4a">Ametista</label><br>
+                    <input type="checkbox" value="Lapis Lazuli" id="p5b" name="pergunta4">
+                    <label for="p4b">Lapis Lazuli</label><br>
+                    <input type="checkbox" value="Jade" id="p5c" name="pergunta4">
+                    <label for="p4c">Jade</label><br>
+                    <input type="checkbox" value="Jasper" id="p5d" name="pergunta4">
+                    <label for="p4d">Jasper</label>
+                </form>
+            </section>
+            <!--Pergunta 06-->
+            <section>
+                <h2>Pergunta 06: Qual era função de uma Lapis Lazuli no império gem antes da 2º Era?</h2>
+                <form>
+                    <input type="radio" value="Construir estruturas para a elite" id="p6a" name="pergunta6">
+                    <label for="p6a">Construir estruturas para a elite</label><br>
+                    <input type="radio" value="Revelar o futuro" id="p6b" name="pergunta6">
+                    <label for="p6b">Revelar o futuro</label><br>
+                    <input type="radio" value="Terraformar planetas" id="p6c" name="pergunta6">
+                    <label for="p6c">Terraformar planetas</label>
+                </form>
+            </section>
+            <!--Pergunta 07-->
+            <section>
+                <h2>Pergunta 07: Qual das diamantes tem mais poder na hierarquia gem?</h2>
+                <form>
+                    <select name="pergunta7" id="p7">
+                        <option value="Damarelo">Diamante Amarelo</option>
+                        <option value="Dazul">Diamante Azul</option>
+                        <option value="Dbranco">Diamante Branco</option>
+                        <option value="Drosa">Diamante Rosa</option>
+                    </select>
+                </form>
+            </section>
+            <!--Pergunta 08-->
+            <section>
+                <h2>Pergunta 08: Qual o nome da criadora de Steven Universo?</h2>
+                <input type="text" id="p8" name="pergunta8" placeholder="Digite sua resposta...">
             </section>
         </main>
         <footer></footer>
