--- a/Atividade_N1/coiso.html
+++ b/Atividade_N1/coiso.html
@@ -75,7 +75,7 @@
             </section>
             <!--Pergunta 06-->
             <section>
-                <h2>Pergunta 06: Qual era função de uma Lapis Lazuli no império gem antes da 2º Era?</h2>
+                <h2>Pergunta 06: Qual era função de uma Lapis Lazuli no império gem antes da 3º Era?</h2>
                 <form>
                     <input type="radio" value="Construir estruturas para a elite" id="p6a" name="pergunta6">
                     <label for="p6a">Construir estruturas para a elite</label><br>
@@ -114,6 +114,8 @@
                 </form>
             </section>
         </main>
-        <footer></footer>
+        <footer>
+            <p class="paragrafo-footer">&copy Quiz de Steven Universo. Todos os direitos reservados.</p>
+        </footer>
     </body>
     </html>
