--- a/Atividade_N1/coiso.html
+++ b/Atividade_N1/coiso.html
@@ -113,6 +113,25 @@
                     
                 </form>
             </section>
+            <button onclick="botaoRespostas()">Checar Respostas</button>
+
+             <!--Lista de Respostas-->
+             <section>
+                <h2>Verifique suas respostas</h2>
+                <details>
+                    <summary>Clique aqui para ver as respostas do quiz</summary>
+                    <ol>
+                        <li>Pérola</li>
+                        <li>5 temporadas</li>
+                        <li>04/11/2013</li>
+                        <li>Canhão de Luz Laser</li>
+                        <li>Lapis Lazuli, Jasper</li>
+                        <li>Terraformar planetas</li>
+                        <li>Barriga</li>
+                        <li>Diamante Azul</li>
+                    </ol>
+                </details>
+            </section>
         </main>
         <footer>
             <p class="paragrafo-footer">&copy Quiz de Steven Universo. Todos os direitos reservados.</p>
