--- a/Atividade_N1/coiso.html
+++ b/Atividade_N1/coiso.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <header>
-            <h1>Quiz Interativo Steven Universo</h1>
+            <div>
+                <img scr="img_estrela.png"alt="estrela Steven Universo">
+                <h1>Quiz Interativo Steven Universo</h1>
+            </div>
             
         </header>
         <main>
@@ -113,7 +116,7 @@
                     
                 </form>
             </section>
-            <button onclick="botaoRespostas()">Checar Respostas</button>
+           <!--<button onclick="botaoRespostas()">Checar Respostas</button>--> 
 
              <!--Lista de Respostas-->
              <section>
