--- a/Atividade_N1/index.html
+++ b/Atividade_N1/index.html
@@ -8,20 +8,22 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <div id="img estrela">
-                <img scr="img_estrela.png"alt="estrela Steven Universo">
-            </div>
-            <div id="titulo">
-                 <h1>Quiz Interativo Steven Universo</h1>
-            </div>
-        </header>
-        <main>
+        <div>
+            <header>
+                <div id="img_estrela">
+                    <img scr=".assets/estrela_SU.webp" alt="estrela Steven Universo">
+                </div>
+                <div id="titulo">
+                    <h1>Quiz Interativo Steven Universo</h1>
+                </div>
+            </header>
+         </div>
+    <main>
             <p class="paragrafo-introducao" >Você é mesmo <strong>FÃ</strong> de <abbr title="Steven Universo">SU</abbr>?! Então venha testar seus conhecimentos sobre esse desenho maravilhoso!!<br>
             OBS: Irei considerar a ordem de lançamento dos episódios dos Estados Unidos e apenas o desenho clássico, não o <abbr title="Steven Universo">SU</abbr> Future.<br>Vamos começar!</p>
             <!--Pergunta 01 vamoooooossss-->
             <section>
-                <h2>Pergunta 01: Qual foi a primeria Crystal Gem que vimos "<abbr title="Desestabilizar">poofar</abbr>" no desenho?</h2>
+                <h2 >Pergunta 01: Qual foi a primeria Crystal Gem que vimos "<abbr title="Desestabilizar">poofar</abbr>" no desenho?</h2>
                 <form>
                     <input type="radio" value="Garnet" id="p1a" name="pergunta1">
                     <label for="p1a">Garnet</label><br>
@@ -65,16 +67,16 @@
             </section>
             <!--Pergunta 05 pausa-->
             <section>
-                <h2>Pergunta 05: A fusão Malaquita é composta por quais gems?</h2>
+                <h2 id="p5">Pergunta 05: A fusão Malaquita é composta por quais gems?</h2>
                 <form>
                     <input type="checkbox" value="Ametista" id="p5a" name="pergunta4">
-                    <label for="p4a">Ametista</label><br>
+                    <label for="p5a">Ametista</label><br>
                     <input type="checkbox" value="Lapis Lazuli" id="p5b" name="pergunta4">
-                    <label for="p4b">Lapis Lazuli</label><br>
+                    <label for="p5b">Lapis Lazuli</label><br>
                     <input type="checkbox" value="Jade" id="p5c" name="pergunta4">
-                    <label for="p4c">Jade</label><br>
+                    <label for="p5c">Jade</label><br>
                     <input type="checkbox" value="Jasper" id="p5d" name="pergunta4">
-                    <label for="p4d">Jasper</label>
+                    <label for="p5d">Jasper</label>
                 </form>
             </section>
             <!--Pergunta 06-->
@@ -172,7 +174,7 @@
                     </ol>
                 </details>
             </section>
-        </main>
+    </main>
         <footer>
             <p class="paragrafo-footer">&copy Quiz de Steven Universo. Todos os direitos reservados.</p>
         </footer>
