--- a/Atividade_N1/index.html
+++ b/Atividade_N1/index.html
@@ -11,7 +11,7 @@
         <div>
             <header>
                 <div id="img_estrela">
-                    <img scr=".assets/estrela_SU.webp" alt="estrela Steven Universo">
+                    <img scr="./assets/estrela_SU.webp" alt="estrela Steven Universo">
                 </div>
                 <div id="titulo">
                     <h1>Quiz Interativo Steven Universo</h1>
