--- a/Atividade_N1/index.html
+++ b/Atividade_N1/index.html
@@ -153,7 +153,7 @@
                     </tbody>
                     <tfoot>
                         <tr>
-                            <td colspan="2">Boa sorte na próxima! Estude mais para melhorar</td>
+                            <td colspan="2">Mandou bem demais!</td>
                         </tr>
                     </tfoot>
                 </table>
