--- a/Avaliação_N2/Projeto_PW/frontend/index.html
+++ b/Avaliação_N2/Projeto_PW/frontend/index.html
@@ -126,10 +126,11 @@
                         <option value="3 temporadas">3 temporadas</option>
                         <option value="5 temporadas">5 temporadas</option>
                         <option value="6 temporadas">6 temporadas</option>
+                    </select>
                 </form>
             </section>
             
-            <button type="button" onclick="verificarQuiz()">Verificar Rsultado</button><br>
+            <button type="button" onclick="verificarQuiz()">Verificar Resultado</button><br>
                     <p id="resultado"></p>
 
             <form>
@@ -144,7 +145,7 @@
             </form>
                 <h2>RANKING</h2>
                 <ul id="rankingLista"></ul>
-
+<button>oioioi</button>
             <!--Tabela de Pontuação-->
             <section>
                 <h2>Tabela de Pontuação</h2>
